--- a/index.html
+++ b/index.html
@@ -1,17 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layer 8 Config</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Layer 8 Config</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #0f1117;
+      color: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+    }
+    header {
+      max-width: 900px;
+      margin-bottom: 2rem;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: #63b3ed;
+    }
+    p {
+      font-size: 1.2rem;
+      line-height: 1.6;
+      color: #cbd5e0;
+    }
+    .buttons {
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .buttons a {
+      background-color: #2d3748;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      color: #63b3ed;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.2s;
+    }
+    .buttons a:hover {
+      background-color: #4a5568;
+    }
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #718096;
+    }
+    @media (min-width: 600px) {
+      .buttons {
+        flex-direction: row;
+      }
+    }
+  </style>
 </head>
-<body style="font-family: sans-serif; background: #1a202c; color: #fff; text-align: center; padding: 50px;">
-    <h1>Welcome to Layer 8 Config</h1>
-    <p>Your central hub for networking & cybersecurity merch, scripts, and resources.</p>
+<body>
+  <header>
+    <h1>Layer 8 Config</h1>
+    <p>
+      A place where the network ends and human error begins.  
+      Explore tech-savvy merch, automation tools, and no-nonsense resources for network engineers, sysadmins, and security folks.
+    </p>
 
-    <a href="https://www.redbubble.com/people/layer8config/shop" style="color: #63b3ed;">Shop Merch on Redbubble</a>
-    <br><br>
-    <a href="https://gumroad.com/layer8config" style="color: #63b3ed;">Browse Scripts & Downloads on Gumroad</a>
+    <div class="buttons">
+      <a href="https://www.redbubble.com/people/layer8config/shop" target="_blank">🛍️ Shop Merch</a>
+      <a href="https://layer8config.gumroad.com" target="_blank">📦 Browse Scripts</a>
+    </div>
+  </header>
+
+  <footer>
+    &copy; 2025 Layer 8 Config. No refunds on misconfigured humans.
+  </footer>
 </body>
 </html>
 
